add execution content script evry time user change url

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "PromoRepublicUserData",
   "version": "0.0.1",
   "description": "Get full user data in intercom",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
+  "permissions": ["activeTab", "declarativeContent", "storage", "webNavigation", "tabs", "*://app.intercom.io/*"],
   "options_page": "options.html",
   "background": {
     "scripts": ["background.js"],
@@ -25,7 +25,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://app.intercom.io/a/apps/4hozdnh7/*"],
+      "matches": ["https://*/*"],
       "js": ["myscript.js"]
     }
   ],
